--- a/admin.css
+++ b/admin.css
@@ -6,9 +6,14 @@ h1{
     background-color:rgb(119, 32, 32);
     margin-bottom: 0%;
 }
+body{
+    background-image: url('OIP.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .left{
-    float:left;
+    text-align: center;
     height:630px;
     width: 70%;
 }
@@ -24,13 +29,3 @@ h1{
     background-color:rgb(2, 117, 216);
 }
 
-.rightmine{
-    height:570px;
-    width:230px;
-    background-image:url("https://th.bing.com/th/id/OIP.wh9oa4EsNe8p1Mib9GqJCAHaE7?w=233&h=180&c=7&o=5&dpr=1.1&pid=1.7");
-    background-size: cover;
-    background-repeat: no-repeat;
-    float:right;
-    margin:0;
-    
-}
