--- a/artist.css
+++ b/artist.css
@@ -16,4 +16,7 @@
             color:white;
             font-weight:bold;      
         }
+        .mybtn{
+            margin:20px;
+        }
     
